<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvHello"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:textAlignment="gravity"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:focusable="true"
        android:longClickable="true"
        android:textColor="#FFFFFF"
        android:textIsSelectable="true"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#325498"
        android:text="@string/_Equal"
        android:textColor="#000000"
        android:textSize="40sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/Button0"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/ButtonDec"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_Decimal"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/ButtonPlus"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_PLus"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/ButtonMinus"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_Minus"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/ButtonMultiply"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_Multiply"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/ButtonDivide"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_Divide"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/Button6"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/Button7"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/Button8"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Button

        android:id="@+id/Button9"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/ButtonClear1"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Clear1"
        android:textColor="#B43B3B"
        android:textSize="34sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:backgroundTint="#596FBB"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:circularflow_defaultRadius="60dp"
        app:circularflow_radiusInDP="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A2A2A2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />


</androidx.constraintlayout.widget.ConstraintLayout>